@@ -16,6 +16,7 @@ EBUILD fontforge-20081117.ebuild 1692 RMD160 2607d96be9cdc433f1980fd13c3d8722012
 EBUILD fontforge-20081215.ebuild 1692 RMD160 6a8f826f852901ca8fdc3fc4c68a0d0859c8d524 SHA1 da8ccf43da5a4cf036834b64c96bb34a16769596 SHA256 bff96ea8b34f9e92133f8a928c4bc809f176f054acfc4daf9717496cb68ea08d
 EBUILD fontforge-20081224-r1.ebuild 3288 RMD160 16060488de7bcb4e13f172b2d11fef48e40a2ae1 SHA1 5a32b81c74993f2681a4f3f7d02a68d861adbec3 SHA256 5b412126bf0fda8c84a0cccc5824cd2c9819c71ea44805857652ec46e880f298
 EBUILD fontforge-20090224.ebuild 3285 RMD160 4b8fb47612ccb86ce2cb3d0c8bedac45b91da7ac SHA1 0132502b54f8d85a60efa2b903a6475d280ff2a4 SHA256 949afec6a1768172277966cffa204435c396025e699aa81df321e7db8e51cfef
+EBUILD fontforge-20090408-r1.ebuild 3424 RMD160 16323b9dc8dd18959c201a13cea62a51922d6197 SHA1 cd3adaff58cd53b31da3746ac382d4d6408f59c8 SHA256 49684cacfe379526dc6d7d71ee16e6260590259eb60b9ff5101240a16d30da80
 EBUILD fontforge-20090408.ebuild 3285 RMD160 0065161095183fc9e075b6091e2e5ad373e28183 SHA1 2c2e422b9d20f811d3aeedaf6202066fe0145885 SHA256 31a9ff80a87d8264d3ca608c48f4df6babf8193d49827efebec9ad17fb006b3e
-MISC ChangeLog 15934 RMD160 4ce3e0c131766c94d6e5aabdc381c85b2c6b1b59 SHA1 0329c1ffe1b4277f992898ae8f43a624e28ddcc0 SHA256 05e4234c4a8a1fa599431efe3026c58ee8049243160e5128df842176a19c721a
-MISC metadata.xml 1408 RMD160 53db86874de33a4d699db7a8366e1e1bd4aae3f1 SHA1 a27d054ff5477089b255a9c3438d488ffd675e89 SHA256 82d69a4888355cf91df8f8822a297edf674ca66e1876bb9c2c2ffee6dec7a681
+MISC ChangeLog 16119 RMD160 14d74594e58d2630aa8103054ddbe5f0ea3dd88d SHA1 4990b859cea4edac5d69fc594b9a5f29bf6051df SHA256 22633fbac129df213f5ee82b58a8b738f7d97c27462ba22941726079adb68d57
+MISC metadata.xml 1464 RMD160 8c357ca288e6d2f7ee5f3de0069a4f998b933995 SHA1 8095e330456f8c4eb5dd047076bc43275ed5bb65 SHA256 d7ca0303b1c02f33e965f9f7a83c1eaf3a508a0abc077c92a6b21dc5f9a28d46
